--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,7 +1,7 @@
 <div class="todo-frame">
   <!-- Display the todo list if todos array has elements, otherwise show loading message -->
-  <div *ngIf="todos.length > 0; else loading" class="todo-list">
-    <h2 class="title">List</h2>
+  <div *ngIf="(todos$ | async)?.length; else loading" class="todo-list">
+            <h2 class="title">List</h2>
 
     <!-- Header row -->
     <div class="todo-item">
@@ -25,7 +25,7 @@
     <!-- Iterate over todos array to display each todo item -->
     <div
       class="todo-item"
-      *ngFor="let todo of todos"
+      *ngFor="let todo of (todos$ | async)"
       (click)="navigateToTodoDetails(todo.Id)"
       style="cursor: pointer"
     >
